objects/Release_Plan__c.object
<CustomObject>
    <fields>
        <fullName>Blocked_or_On_Hold_Controllers__c</fullName>
        <label>Blocked or On Hold - Controllers</label>
        <summarizedField>Team_Release_Plan__c.Blocked_or_On_Hold_Controllers__c</summarizedField>
        <summaryForeignKey>Team_Release_Plan__c.Release_Plan__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Blocked_or_On_Hold_Dependents__c</fullName>
        <label>Blocked or On Hold - Dependents</label>
        <summarizedField>Team_Release_Plan__c.Blocked_or_On_Hold_Dependents__c</summarizedField>
        <summaryForeignKey>Team_Release_Plan__c.Release_Plan__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Blocked_or_On_Hold_Key_Tasks__c</fullName>
        <label>Blocked or On Hold - Key Tasks</label>
        <summarizedField>Team_Release_Plan__c.Blocked_or_On_Hold_Key_Tasks__c</summarizedField>
        <summaryForeignKey>Team_Release_Plan__c.Release_Plan__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Code_Freeze_Date__c</fullName>
        <label>Code Freeze Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>External_Id__c</fullName>
        <caseSensitive>true</caseSensitive>
        <externalId>true</externalId>
        <label>External Id</label>
        <length>255</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Feature_Freeze_Date__c</fullName>
        <label>Feature Freeze Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>First_Beta_Release_Date__c</fullName>
        <label>First Beta Release Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Planned_G_A_Date__c</fullName>
        <label>Planned G.A. Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Second_Beta_Release_Date__c</fullName>
        <label>Second Beta Release Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Third_Beta_Release_Date__c</fullName>
        <label>Third Beta Release Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Total_Count_Key_Tasks__c</fullName>
        <label>Total Count - Key Tasks</label>
        <summarizedField>Team_Release_Plan__c.Total_Count_Key_Tasks__c</summarizedField>
        <summaryForeignKey>Team_Release_Plan__c.Release_Plan__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <label>Release Plan</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>OWNER.ALIAS</columns>
        <columns>Planned_G_A_Date__c</columns>
        <columns>First_Beta_Release_Date__c</columns>
        <columns>Second_Beta_Release_Date__c</columns>
        <columns>Third_Beta_Release_Date__c</columns>
        <columns>Feature_Freeze_Date__c</columns>
        <columns>Code_Freeze_Date__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Release Plan Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Release Plans</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>